Upgrade to Spring Boot 2.6.1
 * remove Grunt as it doesn't seem to be best-practice anymore
 * use custom jlink JRE instead of full JDK
 * use Java 17
 * fix dependency cycle that is now an issue with Spring Boot not
 ancient